[gd_scene load_steps=4 format=3 uid="uid://d4liewuv58aft"]

[ext_resource type="Script" uid="uid://duidcy6xo01t5" path="res://Scripts/Complementary/espada.gd" id="3_kxn5r"]
[ext_resource type="Texture2D" uid="uid://onwtd55yu387" path="res://ArtWork/Sprites/DuelExpansion/ICONE ESCUDO LIGADO.png" id="4_v0uwj"]
[ext_resource type="Texture2D" uid="uid://c4ge5ooiolmdr" path="res://ArtWork/Sprites/DuelExpansion/ICONE ESCUDO DESLIGADO.png" id="5_kxn5r"]

[node name="Shield" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -894.0
offset_bottom = -754.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(8, 8)
texture_normal = ExtResource("5_kxn5r")
texture_pressed = ExtResource("4_v0uwj")
script = ExtResource("3_kxn5r")
textura_ligada = ExtResource("4_v0uwj")
textura_desligada = ExtResource("5_kxn5r")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
